[package]
name = "unblock_proxy_sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
hyper-tls = "0.6.0"
md-5 = "0.10.6"
base64 = "0.21.7"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
bytes = "1.5.0"
http-body-util = "0.1.0"
openssl = { version = "0.10", features = ["vendored"]} 